# opengl-demo

./: CMakeLists.txt  world.blend
common/include/: AssimpLoader.hpp  Config.hpp  GLMesh.hpp  GLModel.hpp  Mesh.hpp  Model.hpp  Shader.hpp
common/src/: AssimpLoader.cpp  GLMesh.cpp  GLModel.cpp  ResourceManager.cpp
cubemap/: CMakeLists.txt
cubemap/resources/shaders/: cubemap.fragment  cubemap.vertex  main.fragment  main.vertex
cubemap/src/: main.cpp
cubeshadow/: CMakeLists.txt
cubeshadow/resources/shaders/: main.fragment  main.vertex  shadow.fragment  shadow.vertex
cubeshadow/src/: main.cpp
res/: cube.dae  world.mtl
shaders/: main.fragment  main.vertex  pointlight.fragment  pointlight.vertex  shadowmap.fragment
shadowmap/: CMakeLists.txt
shadowmap/resources/models/: world.mtl
shadowmap/resources/res/: teapot.mtl
shadowmap/resources/shaders/: main.fragment  pointlight.fragment  pointlight.vertex  shadowmap.fragment  shadowmap.vertex
shadowmap/src/: Mesh.hpp  Model.cpp  Model.hpp  ResourceManager.cpp  ResourceManager.hpp  main.cpp
skeletalanimation/: CMakeLists.txt
skeletalanimation/res/: cube.dae  lock.dae
skeletalanimation/shaders/: main.fragment
skeletalanimation/src/: main.cpp  utils.cpp  utils.hpp
src/: Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  ResourceManager.cpp  ResourceManager.hpp  Shader.cpp  main.cpp
